# jpcrs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  bump.yml  publish.yml  rust.yml
par/: Cargo.toml  Makefile  touhokutaiheiyouoki2011.in
par/conv/: Cargo.toml
par/conv/src/: main.rs
par/src/: main.rs
parconv/: Cargo.toml  Makefile
parconv/src/: main.rs
src/: bl.rs  coord.rs  coord_.rs  crs.rs  crs_.rs  earth.rs  geodetic.rs  grid.rs  island.rs  lib.rs  neo.rs  neo1.rs  neo2.rs  neo3.rs  neo4.rs  neo5.rs  neo6.rs  neo7.rs  neo8.rs  neo9.rs  par.rs  tky2jgd.rs  transform.rs
tests/: degree.rs  draft.rs  patchjgd.rs  proj.rs  proj4.rs  tjy2jgd.rs  tky2jgd.rs  transform.rs
