[package]
name = "jpcrs"
version = "0.1.0"
edition = "2021"
description = "Transform coordinate reference systems in Japan"
keywords = ["geospatial", "jgd"]

[workspace]
members = ["par"]

[features]
# default = ["geo-types"]       # tmp
geo-types = ["dep:geo-types"]

[dependencies]
geo-types = { version = "0.7.13", optional = true }

[dev-dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
geo-types = "0.7.13"
proj4rs = { version = "0.1.3", path = "../../Downloads/proj4rs", default-features = false }
